Final edits before library submission.

--- a/doc/thesis/ack.tex
+++ b/doc/thesis/ack.tex
@@ -3,7 +3,7 @@
 
 % Here I thank all the people!
 
-First and foremost, I would like to thank my supervisor, Dr. Sheridan Houghten for being the best mentor I could have asked for. Without her guidance and patience I would not have been able to achieve the success I have today. I would also like to thank my advisory committee Dr. Doug Bruce, Dr. Brian Ross, and Dr. Dan Ashlock.
+First and foremost, I would like to thank my supervisor, Dr. Sheridan Houghten for being the best mentor I could have asked for. Without her guidance and patience I would not have been able to achieve the success I have today. I would also like to thank my advisory committee Dr. Doug Bruce, Dr. Brian Ross, and external examiner Dr. Dan Ashlock.
 
 Special thanks goes to the Brock University Computer Science Department. Especially, Donna Phelps for her help navigating the paper work and Cale Fairchild for taking the time to ensure that my experiments ran smoothly and efficiently.
 
