--- a/doc/thesis/background/ea.tex
+++ b/doc/thesis/background/ea.tex
@@ -1,9 +1,9 @@
 \section{Genetic Algorithm}
 \label{sec:ea}
 
-A genetic algorithm (GA) is a population-based metaheuristic optimization algorithm that is based on Darwin's theory of natural evolution. Darwin theorized that over a period of time a population of individuals would naturally mate and create offspring that were better than themselves. He suggested that not all individuals are created equally and that eventually the weaker individuals would die off. Leaving the strong to survive and reproduce. This same principle can be applied to a search algorithm as a heuristic. A GA contains a population of individuals that are evolved to find improved candidate solutions.
+A genetic algorithm (GA) is a population-based metaheuristic optimization algorithm that is based on Darwin's theory of natural evolution. Over a period of time a population of individuals mate and create offspring. Darwin theorized that not all offspring are created equally and that eventually the weaker individuals would die off as a result of not being well adapted to their environment, leaving the strong to survive and reproduce. This same principle can be applied to a search algorithm as a heuristic. A GA contains a population of individuals that are evolved to find improved candidate solutions.
 
-Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic GA operates. Initially a \textit{population} of random candidate solutions is generated. The individuals are evaluated based on an \textit{evaluation function} and are checked against the \textit{stopping criterion}. If the \textit{stopping criterion} has not been reached the population goes through an \textit{evolutionary period} where a new population of candidate individuals are created from the last population. This iterative process, also called a \textit{generation}, is repeated until the \textit{stopping criterion} is reached. The following subsections will explain each of these parts.
+Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic GA operates. Initially a \textit{population} of candidate solutions is generated. The individuals are evaluated based on an \textit{evaluation function} and are checked against the \textit{stopping criterion}. If the \textit{stopping criterion} has not been reached the population goes through an \textit{evolutionary period} where a new population of candidate individuals are created from the last population. This iterative process, also called a \textit{generation}, is repeated until the \textit{stopping criterion} is reached. The following subsections will explain each of these parts.
 
 \begin{figure}[H]
 	\centering
@@ -45,7 +45,7 @@ Tournament selection works by randomly selecting \textit{k} individuals from the
 
 \textit{Crossover Operator}: This operator is essential to evolving the individuals of the population. Crossover is the mechanism by which two individuals breed to create two new individuals. With respect to the evolutionary process, crossover exploits the current information that is contained within the population in order to find improved individuals.
 
-For example, One-point crossover could be used. This crossover method works by splitting the two individuals apart based on a randomly selected pivot point and swapping the pieces. In Figure~\ref{fig:1PointCrossover}, the pivot point was selected between index 2 and 3. The information after the pivot point is swapped between the parents to create the children. Each child will contain a peice of information from both parents.
+For example, one-point crossover could be used. This crossover method works by splitting the two individuals apart based on a randomly selected pivot point and swapping the pieces. In Figure~\ref{fig:1PointCrossover}, the pivot point was selected between index 2 and 3. The information after the pivot point is swapped between the parents to create the children. Each child will contain a piece of information from both parents.
 
 \begin{figure}[H]
   \centering
@@ -91,4 +91,4 @@ For example, One-point crossover could be used. This crossover method works by s
   \label{fig:mutation}
 \end{figure}
 
-\textit{Elitism Operator}: During each generation of the genetic algorithm a new population is created using the individuals from the population in the previous generation. The new population is bred from the previous individuals with the hopes of creating better individuals. Sometimes this is not the case and the population can end up losing valuable information from individuals that were not chosen during the selection process. To prevent this from happening the elitism operator is used. The elitism operator works by seeding the next generation's population with the individuals with the best fitness scores from the previous generation. The top 2-5 individuals are copied into the next generation.
+\textit{Elitism Operator}: During each generation of the genetic algorithm a new population is created using the individuals from the population in the previous generation. The new population is bred from the previous individuals with the hopes of creating better individuals. Sometimes this is not the case and the population can end up losing valuable information from individuals that were not chosen during the selection process. To prevent this from happening the elitism operator is used. The elitism operator works by seeding the next generation's population with the individuals with the best fitness scores from the previous generation. Only a very small number of individuals (at most 1\%) are copied into the next generation.
