--- a/doc/thesis/experimental-design/ga.tex
+++ b/doc/thesis/experimental-design/ga.tex
@@ -24,7 +24,7 @@ The number of generations could not be specified for the RGA experiments because
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
 		Crossover Rate & 80 & 80 & 70 & 80 & 70 & 80 \\ \hline
 		Mutation Rate & 20 & 10 & 30 & 10 & 30 & 20 \\ \hline
-		Elitism & 0 & 0 & 0 & 1 & 1 & 1 \\ \hline
+		Elitism Size & 0 & 0 & 0 & 1 & 1 & 1 \\ \hline
 		Generations & 30 & 30 & 30 & 30 & 30 & 30 \\ \hline
 		Population Size & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
 	\end{tabular}
@@ -39,7 +39,7 @@ The number of generations could not be specified for the RGA experiments because
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ \hline
 		Crossover Rate & 80 & 80 & 80 & 80 & 70 & 70 & 70 & 70 \\ \hline
 		Mutation Rate & 20 & 20 & 20 & 20 & 30 & 30 & 30 & 30 \\ \hline
-		Elitism & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\ \hline
+		Elitism Size & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\ \hline
 		Population Size & 50 & 50 & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
 		Convergence Rate & 10 & 5 & 10 & 5 & 10 & 5 & 10 & 5 \\ \hline
 		Number of Restarts & 3 & 3 & 5 & 5 & 3 & 3 & 5 & 5 \\ \hline
