--- a/doc/thesis/experimental-design/subset.tex
+++ b/doc/thesis/experimental-design/subset.tex
@@ -32,7 +32,7 @@ A basic GA was used in this experiment. The system parameters used during the ex
 		Population size & 50 \\
 		Crossover rate & 0.7 \\
 		Mutation rate & 0.3 \\
-		Elitism & 1 \\
+		Elitism Size & 1 \\
 		\hline
 	\end{tabular}
 	\caption{GA Subset Parameters}
