--- a/doc/thesis/methodology/genetic-operators.tex
+++ b/doc/thesis/methodology/genetic-operators.tex
@@ -1,13 +1,15 @@
 \section{Genetic Operators}
 \label{sec:ga-operators}
 
-\begin{table}
+In this section each of the genetic operators will be explained briefly. The parameters are summarized in Table~\ref{table:ga-operators}.
+
+\begin{table}[H]
 	\centering
 	\begin{tabular}{ | l | l | }
 		\hline
-		Crossover & One-point \\ \hline
-		Mutation & 0.05 \\ \hline
-		Tourament Size & 3 \\ \hline
+		\textbf{Crossover} & One-point \\ \hline
+		\textbf{Mutation} & 0.05 \\ \hline
+		\textbf{Tourament Size} & 3 \\ \hline
 	\end{tabular}
 	\caption{GA Operators}
 	\label{table:ga-operators}
