--- a/doc/thesis/methodology/population-generation.tex
+++ b/doc/thesis/methodology/population-generation.tex
@@ -44,6 +44,6 @@ A population can be generated randomly based on a starting molecule. To create a
 
 An alternative method of population generation was needed to generate individuals that were usable in the experiments. To ensure that the atomic structure was as stable as possible, the structure was put into a molecular dynamics simulation. While in this simulation the molecule is allowed to act as if it were in the real world. The atoms were allowed to move freely in space until the overall temperature of the system was reasonably low. This acted as the baseline atomic structure for all tests. NAMD~\cite{namd} was used to run the molecular dynamics simulations.
 
-Once the atom structure was stable the temperature within the system was increased. The increased temperature causes the atoms to oscillate their positions but still remain chemically feasible. During this process stapshots of the molecule's atomic structure were recorded. The simulation was allowed to run for 10\ 000 steps and 10\ 000 snapshots of the atomic structure were recorded. Each of these snapshots creates a feasible individual for the experiments.
+Once the atom structure was stable the temperature within the system was increased. The increased temperature causes the atoms to oscillate their positions but still remain chemically feasible. During this process stapshots of the molecule's atomic structure were recorded. The simulation was allowed to run for 10000 steps and 10000 snapshots of the atomic structure were recorded. Each of these snapshots creates a feasible individual for the experiments.
 
-Since 10\ 000 individuals is more than enough individuals to seed the populations the best individuals were picked. The generated atomic structures were run through IFEFFIT~\cite{ifeffit} and compared to the target EXAFS spectra. The top 3\% (roughly 300) individuals were used to generate the initial populations in the evolutionary algorithms.
+Since 10000 individuals is more than enough individuals to seed the populations the best individuals were picked. The generated atomic structures were run through IFEFFIT~\cite{ifeffit} and compared to the target EXAFS spectra. The top 3\% (roughly 300) individuals were used to generate the initial populations in the evolutionary algorithms.
