--- a/doc/thesis/methodology/problem-encoding.tex
+++ b/doc/thesis/methodology/problem-encoding.tex
@@ -6,7 +6,7 @@ A molecule consists of a number of atoms. Each of these atoms has its own 3-dime
 \subsection{Representation 1}
 \label{subsec:encoding-1}
 
-The initial run of experiments used a representation that maintained the initial atomic positions of each atom. The 3-dimensional coordinates were treated as a list of coordinates as shown in Figure~\ref{fig:representation1}. Using this representation meant that during any form of crossover the tuple of X, Y and Z values would stay together if crossover is suitable implemented.
+The initial run of experiments used a representation that maintained the initial atomic positions of each atom. The 3-dimensional coordinates were treated as a list of coordinates as shown in Figure~\ref{fig:representation1}. Using this representation meant that during any form of crossover the tuple of X, Y and Z values would stay together if crossover is suitably implemented.
 
 \begin{figure}
 	\centering
