--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -11,7 +11,7 @@ To increase their accuracy the researchers used R-QM/MM. This approach iterative
 
 The researchers speculated that even though the R-QM/MM technique was able to generate an EXAFS spectrum closer to the experimental spectrum their solution was only a local solution because it was based on their original DFT-QM/MM solution.
 
-Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a closer resolution of 1.9\AA. They had success in rerunning the DFT-QM/MM, and R-QM/MM experiment but still had the same speculations about remaining in a local optimum. Their paper included the best atomic structures they were able to achieve. We have analyzed these structures using the same EXAFS spectra fitness score and included them in Table~\ref{fig:previous-work-rmsd}.
+Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a closer resolution of 1.9\AA. They had success in rerunning the DFT-QM/MM, and R-QM/MM experiment but still had the same speculations about remaining in a local optimum. Their paper included the best atomic structures they were able to achieve. We have analyzed these structures using the same EXAFS spectra fitness score (see Section~\ref{sec:fitness-exafs}) and included them in Table~\ref{fig:previous-work-rmsd}. 
 
 \begin{table}
 	\centering
