--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -76,7 +76,7 @@
 	title={Bio-inspired optimization \& sampling technique for side-chain packing in MCCE},
 	author={Comte, Pascal},
 	year={2010},
-	publisher={Brock University}
+	journal={MSc. Thesis, Brock University}
 }
 
 @article{oganov2006crystal,
@@ -168,7 +168,7 @@
 	url={http://www.ks.uiuc.edu/Research/vmd/},
 	howpublished="\url{http://www.ks.uiuc.edu/Research/vmd/}",
 	author={Theoretical and Computational Biophysics Group},
-	note={Accessed: 2014-04-01}
+	note={Accessed: 2014-04-01},
 }
 
 % GA
