--- a/doc/thesis/background/de.tex
+++ b/doc/thesis/background/de.tex
@@ -1,27 +1,16 @@
 \section{Differential Evolution}
 \label{sec:de}
 
-Differential evolution (DE)~\cite{storn1997differential} is a population based search metaheuristic designed to iteratively improve candidate solutions to a problem. DE is well suited for problems containing a nonlinear and non-differentiable continuous search space. DE works by creating a new candidate solution using existing candidate solutions in the population using a \textit{mutation} operator. Once a new candidate solution is created the fitness scores of each solution are compared and the candidate with the better fitness score is put into the new population. Candidate solutions in DE are refered to as \textit{agents}. Figure~\ref{fig:deFlowchart} depicts how evolution occurs in DE and Subsections~\ref{subsec:de-mutation} and~\ref{subsec:de-selection} describe the operators used.
-
-% \begin{figure}[H]
-%   \centering
-%   \includegraphics[bb=0 0 266 144,scale=0.5]{figures/DE.jpeg}
-%   \caption{DE Evolution}
-%   \label{fig:deFlowchart}
-% \end{figure}
-
-% \subsection{Agents}
+Differential evolution (DE)~\cite{storn1997differential} is a population based search metaheuristic designed to iteratively improve candidate solutions to a problem. DE is well suited for problems containing a nonlinear and non-differentiable continuous search space. DE works by creating a new candidate solution using existing candidate solutions in the population using a \textit{mutation} operator. Once a new candidate solution is created the fitness scores of each solution are compared and the candidate with the better fitness score is put into the new population. Subsection~\ref{subsec:de-mutation} describes the operators used.
 
 The candidate solutions found in the population of a DE are referred to as agents. Each agent contains a vector of real numbers which represents its position within the search space.
 
-\subsection{Mutation}
+\subsection{Mutation and Selection}
 \label{subsec:de-mutation}
 
 The mutation operator is used to create new individuals from the existing individuals. Individuals are combined using the mathematical formula, shown in Algorithm~\ref{alg:de-mutation}, to create new individuals. Algorithm~\ref{alg:de-mutation} describes the pseudocode for the mutation operator. The mutation operator is performed once for each agent in the population. To locate a new agent's position first three different agents must be randomly selected from the population. The agent's position is combined with the three other agents' positions to create a new position. Each position index within the agent is updated either based on the three other agents selected or the value from the previous agent is copied. The new agent's position is evaluated based on the fitness function. If the agent's new position has resulted in an improved fitness score the new position replaces the old one. If not, the new position is discarded. The variable $F \in [0,2]$ is known as the differential weight, and variable $CR \in [0,1]$ is known as the crossover probability. Both of these variables are user defined.
 
 \begin{algorithm}
-	\caption{Mutation}
-	\label{alg:de-mutation}
 	\begin{algorithmic}
 
 		\FOR{each agent $X$ in the population}
@@ -42,6 +31,8 @@ The mutation operator is used to create new individuals from the existing indivi
 		\ENDFOR
 
 	\end{algorithmic}
+	\caption{Mutation}
+	\label{alg:de-mutation}
 \end{algorithm}
 
 % \subsection{Selection}
