--- a/doc/thesis/experimental-design/ea.tex
+++ b/doc/thesis/experimental-design/ea.tex
@@ -56,9 +56,9 @@ The DE, and PSO experiments were initially run using a variety of different tuni
 	\centering
 	\begin{tabular}{ | c | c | }
 		\hline
-		Inertia & 0.729844 \\ \hline
-		Social & 1.496180 \\ \hline
-		Cognitive & 1.496180 \\ \hline
+		\textbf{Inertia} & 0.729844 \\ \hline
+		\textbf{Social} & 1.496180 \\ \hline
+		\textbf{Cognitive} & 1.496180 \\ \hline
 	\end{tabular}
 	\caption{Algorithm parameters for the PSO runs}
 	\label{table:ea-pso-algo}
@@ -68,8 +68,8 @@ The DE, and PSO experiments were initially run using a variety of different tuni
 	\centering
 	\begin{tabular}{ | c | c | }
 		\hline
-		Differential Weight & 0.4717 \\ \hline
-		Crossover Probability & 0.8803 \\ \hline
+		\textbf{Differential Weight} & 0.4717 \\ \hline
+		\textbf{Crossover Probability} & 0.8803 \\ \hline
 	\end{tabular}
 	\caption{Algorithm parameters for the DE runs}
 	\label{table:ea-de-algo}
